tests/roxctl/bats-tests/test-data/np-guard/ingress-with-multiple-services-example/deployment_with_multiple_services.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingressworld
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-world-multiple-ports
  namespace: ingressworld
  labels:
    app: ingress-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-world
  template:
    metadata:
      labels:
        app: ingress-world
    spec:
      containers:
      - name: ingressworld
        image: quay.io/shfa/ingress-world:latest
        ports:
        - containerPort: 8000  # containerport1
        - containerPort: 8050  # containerport2
        - containerPort: 8090  # containerport3
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-world-svc1
  namespace: ingressworld
spec:
  ports:
    - name: port1
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: port2
      protocol: TCP
      port: 8050
      targetPort: 8050
  selector:
    app: ingress-world
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-world-svc2
  namespace: ingressworld
spec:
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  selector:
    app: ingress-world
