tests/roxctl/bats-tests/test-data/np-guard/ingress-with-multiple-services-example/ingress_multiple_rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-world
  namespace: ingressworld
spec:
  rules:
  - host: ingress.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-world-svc2
            port:
              number: 8090
  - host: ingress-2.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-world-svc1
            port:
              name: port1
